fixed reverse out of defined dates message

--- a/app/views/code_comment/comments/_app_lib_calculations_pnsi_reverse.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_pnsi_reverse.html.erb
@@ -57,7 +57,7 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi_reverse.rb#L44' title='View on GitHub'>44</a>         if date.is_calendar_not_populated?</code></pre>
 <p>... this error message is displayed to users ...</p>
 
-<pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi_reverse.rb#L47' title='View on GitHub'>47</a>           @error_message = &quot;It&#39;s not currently possible to calculate an anticipated start date, as the likely start date occurs during a period for which no sitting day information is available.&quot;</code></pre>
+<pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi_reverse.rb#L47' title='View on GitHub'>47</a>           @error_message = &quot;It&#39;s not currently possible to calculate an anticipated start date, as that date occurs during a period for which no sitting day information is available.&quot;</code></pre>
 <p>... and we stop looking through the calendar.</p>
 
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi_reverse.rb#L50' title='View on GitHub'>50</a>           break</code></pre>
