fixed reverse out of defined dates message

--- a/app/views/code_comment/comments/_app_lib_calculations_treaty_reverse.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_treaty_reverse.html.erb
@@ -46,7 +46,7 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty_reverse.rb#L37' title='View on GitHub'>37</a>         elsif date.is_calendar_not_populated?</code></pre>
 <p>... this error message is displayed to users ...</p>
 
-<pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty_reverse.rb#L40' title='View on GitHub'>40</a>           @error_message = &quot;It&#39;s not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced.&quot;</code></pre>
+<pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty_reverse.rb#L40' title='View on GitHub'>40</a>           @error_message = &quot;It&#39;s not currently possible to calculate an anticipated start date, as that date occurs during a period for which no sitting day information is available.&quot;</code></pre>
 <p>... and we stop looking through the calendar.</p>
 
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty_reverse.rb#L43' title='View on GitHub'>43</a>           break</code></pre>
