--- a/app/views/code_comment/index.html.erb
+++ b/app/views/code_comment/index.html.erb
@@ -15,6 +15,7 @@
 
 <%= content_tag( 'h2', 'Scrutiny start date calculators' ) %>
 <ul>
+	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', code_comment_commons_only_sis_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', code_comment_pnsis_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', code_comment_treaties_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only sitting days', code_comment_commons_only_sitting_days_reverse_url ) ) %>
