readded links to reverse calculation form

--- a/app/views/calculator/_nav.html.erb
+++ b/app/views/calculator/_nav.html.erb
@@ -1,5 +1,5 @@
 <p class="subnav">
 	<%= link_to( 'Scrutiny end date calculator', calculator_form_url, :class => 'scrutiny-calculator' ) %>
-	<%#= link_to( 'Scrutiny start date calculator', reverse_calculator_form_url, :class => 'scrutiny-calculator-reverse' ) %>
+	<%= link_to( 'Scrutiny start date calculator', reverse_calculator_form_url, :class => 'scrutiny-calculator-reverse' ) %>
 	<%= link_to( 'Sitting days during an interval calculator', calculator_interval_url, :class => 'interval-calculator' ) %>
 </p>
