--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -248,6 +248,11 @@ div.debug {
 	padding: 10px;
 }
 
+div.stale-warning {
+  border: 3px solid red;
+  padding: 10px;
+}
+
 h1 span[class="subhead"] {
 	display: block;
 	font-size: .7em;
