end date form element now called target end date

--- a/app/views/calculator/_reverse_form.html.erb
+++ b/app/views/calculator/_reverse_form.html.erb
@@ -8,7 +8,7 @@
 	</fieldset>
 	
 	<fieldset>
-		<legend>Choose an end date</legend>
+		<legend>Choose a target end date</legend>
 			
 			<p><input type="date" name="start-date" id="start-date" required>
 		
