added reverse calculation for bicameral with both houses sitting

--- a/app/views/code_comment/index.html.erb
+++ b/app/views/code_comment/index.html.erb
@@ -15,6 +15,7 @@
 
 <%= content_tag( 'h2', 'Scrutiny start date calculators' ) %>
 <ul>
+	<%= content_tag( 'li', link_to( 'Calculation for bicameral instruments with both Houses sitting', code_comment_bicameral_both_houses_sitting_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with either House sitting', code_comment_bicameral_either_house_sitting_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', code_comment_commons_only_sis_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', code_comment_pnsis_reverse_url ) ) %>
