--- a/app/views/meta/using_start_date_calculator.html.erb
+++ b/app/views/meta/using_start_date_calculator.html.erb
@@ -1,4 +1,82 @@
 <%= render :partial => 'calculator/nav' %>
 
+<%= content_tag( 'p', 'Set the target end date to the date you want the instrument to clear its statutory parliamentary scrutiny period.' ) %>
 
-Some instructions here.
+<%= content_tag( 'h2', 'Legislative reform order scrutiny period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the number of days to count as 30 for the procedure determination period." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 40 for negative or affirmative." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 60 for super affirmative." ) %>
+	<%= content_tag( 'li', "If the Minister chooses to lay a revised instrument as part of the super-affirmative procedure, the clock continues from the laying of the original instrument." ) %>
+	<%= content_tag( 'li', "Should a procedure recommendation be made by a committee of either House and the recommendation be rejected by that House, no account is taken of any day between the day on which the recommendation was made and the day on which the recommendation was rejected." ) %>
+	<%= content_tag( 'li', "#{link_to( 'Contact the SLSC', 'mailto:hlseclegscrutiny@parliament.uk' )} team if in doubt.".html_safe ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Localism order scrutiny period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the number of days to count as 40 for negative or affirmative." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 60 for super affirmative.
+" ) %>
+	<%= content_tag( 'li', "#{link_to( 'Contact the SLSC', 'mailto:hlseclegscrutiny@parliament.uk' )} team if in doubt.".html_safe ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Negative statutory instrument praying period (laid before Commons only)' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 40." ) %>
+
+<%= content_tag( 'h2', 'Negative statutory instrument praying period (laid before both Houses)' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 40." ) %>
+
+<%= content_tag( 'h2', 'Made affirmative approval period (laid before Commons only)' ) %>
+<%= content_tag( 'p', "Set the number of days to count as specified in italics at the top of the instrument on #{link_to( 'legislation.gov.uk', 'https://www.legislation.gov.uk/' )}.".html_safe ) %>
+
+<%= content_tag( 'h2', 'Made affirmative approval period (laid before both Houses, clock stops if either House rises)' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the number of days to count as specified in italics at the top of the instrument on #{link_to( 'legislation.gov.uk', 'https://www.legislation.gov.uk/' )}.".html_safe ) %>
+	<%= content_tag( 'li', "Refer to the enabling Act to check if the clock stops if either House rises.
+" ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Made affirmative approval period (laid before both Houses, clock stops if both Houses rise)' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the number of days to count as specified in italics at the top of the instrument on #{link_to( 'legislation.gov.uk', 'https://www.legislation.gov.uk/' )}.".html_safe ) %>
+	<%= content_tag( 'li', "Refer to the enabling Act to check if the clock stops if both Houses rise." ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Proposed negative statutory instrument - committee sifting period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 10." ) %>
+
+<%= content_tag( 'h2', 'Published draft under the European Union (Withdrawal) Act 2018' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 28." ) %>
+
+<%= content_tag( 'h2', 'Remedial order (non-urgent procedure) - proposed draft scrutiny period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 60." ) %>
+
+<%= content_tag( 'h2', 'Remedial order (non-urgent procedure) - draft affirmative scrutiny period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 60." ) %>
+
+<%= content_tag( 'h2', 'Remedial order (urgent procedure) - made affirmative scrutiny period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 60." ) %>
+
+<%= content_tag( 'h2', 'Remedial order (urgent procedure) - made affirmative approval period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 120." ) %>
+
+<%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - recommendation period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 30." ) %>
+
+<%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - pre-approval period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 40." ) %>
+
+<%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - extended pre-approval period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 60." ) %>
+
+<%= content_tag( 'h2', 'National Policy Statement consideration period' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 21." ) %>
+
+<%= content_tag( 'h2', 'Treaty objection period A' ) %>
+<ul>
+	<%= content_tag( 'li', "Check if there has been a Government statement extending period A." ) %>
+	<%= content_tag( 'li', "If not, set the number of days to count as 21." ) %>
+</ul>
+ 
+<%= content_tag( 'h2', 'Treaty objection period B' ) %>
+<%= content_tag( 'p', "Set the number of days to count as 21." ) %>
