edit to intro of reverse calculation how to

--- a/app/views/meta/using_start_date_calculator.html.erb
+++ b/app/views/meta/using_start_date_calculator.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => 'calculator/nav' %>
 
-<%= content_tag( 'p', 'Set the target end date to the date you want the instrument to clear its statutory parliamentary scrutiny period.' ) %>
+<%= content_tag( 'p', 'Set the target end date to the date on which you want the instrument to complete its statutory scrutiny period.' ) %>
 
 <%= content_tag( 'h2', 'Legislative reform order scrutiny period' ) %>
 <ul>
