--- a/app/views/calculator/day_count_form.html.erb
+++ b/app/views/calculator/day_count_form.html.erb
@@ -27,12 +27,21 @@
 			<% end -%>	
 		</label>
 	</p>
+	<%= @direction %>
 	<% if @procedure -%>
 	
 		<% if @procedure.typical_day_count && @procedure.has_day_count_caveats == true  -%>
-			<%= content_tag( 'p', "The pre-populated value is a typical value for this type of instrument. It may not be the correct value. Please refer to #{link_to( 'our guidance on using the calculator', meta_using_url )}.".html_safe ) %>
+			<% if @direction == 'reverse' %>
+				<%= content_tag( 'p', "The pre-populated value is a typical value for this type of instrument. It may not be the correct value. Please refer to #{link_to( 'our guidance on using the calculator', meta_using_reverse_url )}.".html_safe ) %>
+			<% else -%>
+				<%= content_tag( 'p', "The pre-populated value is a typical value for this type of instrument. It may not be the correct value. Please refer to #{link_to( 'our guidance on using the calculator', meta_using_url )}.".html_safe ) %>
+			<% end -%>
 		<% elsif @procedure.has_day_count_caveats == true -%>
-			<%= content_tag( 'p', "Please refer to #{link_to( 'our guidance on using the calculator', meta_using_url )}.".html_safe ) %>
+			<% if @direction == 'reverse' %>
+				<%= content_tag( 'p', "Please refer to #{link_to( 'our guidance on using the calculator', meta_using_reverse_url )}.".html_safe ) %>
+			<% else -%>
+				<%= content_tag( 'p', "Please refer to #{link_to( 'our guidance on using the calculator', meta_using_url )}.".html_safe ) %>
+			<% end -%>
 		<% end -%>
 	<% end -%>
 	
