--- a/app/views/calculator/scrutiny_reverse.html.erb
+++ b/app/views/calculator/scrutiny_reverse.html.erb
@@ -5,10 +5,16 @@
 <% else -%>
 
 	<div class="box">
-		<%= content_tag( 'p', "To produce a target end date of <em>#{@start_date.strftime( '%A, %-d %B %Y')}</em>, the scrutiny period is currently expected to begin on <em>#{@scrutiny_end_date.strftime( '%A, %-d %B %Y')}</em> and end on <em>#{@scrutiny_start_date.strftime( '%A, %-d %B %Y')}</em>.".html_safe ) %>
-	<%= content_tag( 'p', "#{@action_required} #{content_tag( 'strong', @scrutiny_end_date.strftime( '%A, %-d %B %Y') ) } for the scrutiny period to begin on that date.".html_safe ) %>
+		<%= content_tag( 'p', "To produce a target end date of #{@start_date.strftime( '%A, %-d %B %Y')}, the scrutiny period is currently expected to begin on #{@scrutiny_end_date.strftime( '%A, %-d %B %Y')} and end on #{@scrutiny_start_date.strftime( '%A, %-d %B %Y')}.".html_safe ) %>
+	<%= content_tag( 'p', "#{@action_required} #{content_tag( 'strong', @scrutiny_end_date.strftime( '%A, %-d %B %Y') )} for the scrutiny period to begin on that date.".html_safe ) %>
 	</div>
-
+	
+	<% if @twenty_one_day_rule_date -%>
+		<div class="box">
+			<%= content_tag( 'p', "According to the convention described by the '#{link_to( '21 day rule', 'https://erskinemay.parliament.uk/section/5628/time-limits' )}', were the instrument to be laid on #{@scrutiny_end_date.strftime( '%A, %-d %B %Y' )}, it <em>should not come into force earlier than</em> #{content_tag( 'strong', @twenty_one_day_rule_date.strftime( '%A, %-d %B %Y') )}.".html_safe ) %>
+		</div>
+	<% end -%>
+	
 	<p>These dates were calculated using this information:</p>
 	<ul>
 		<%= content_tag( 'li', "A procedure type #{content_tag( 'strong', @procedure.name )}".html_safe ) if @procedure %>
