--- a/app/views/meta/using_start_date_calculator.html.erb
+++ b/app/views/meta/using_start_date_calculator.html.erb
@@ -46,37 +46,48 @@
 <%= content_tag( 'p', "Set the number of days to count as 10." ) %>
 
 <%= content_tag( 'h2', 'Published draft under the European Union (Withdrawal) Act 2018' ) %>
+<%= content_tag( 'p', "Under the #{link_to( 'European Union (Withdrawal) Act 2018', 'https://www.legislation.gov.uk/ukpga/2018/16/contents/enacted' )}, should a Minister wish to make a statutory instrument amending or revoking subordinate legislation made under #{link_to( 'section 2(2) of the European Communities Act 1972', 'https://www.legislation.gov.uk/ukpga/1972/68/section/2/2009-12-01#section-2-2' )}, they must first publish a draft of the instrument 28 days before laying the instrument. The calculation is set out in #{link_to( 'paragraph 14(2) of schedule 8 of the European Union (Withdrawal) Act 2018', 'https://www.legislation.gov.uk/ukpga/2018/16/schedule/8/enacted#schedule-8-paragraph-14-2' )}. This procedure is now repealed.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 28." ) %>
 
 <%= content_tag( 'h2', 'Remedial order (non-urgent procedure) - proposed draft scrutiny period' ) %>
+<%= content_tag( 'p', "The proposed draft scrutiny period is the period during which a House, or a committee of either House charged with reporting on the proposed regulations, may consider the regulations. The calculation is set out in #{link_to( 'paragraph 6 of schedule 2 of the Human Rights Act 1998', 'https://www.legislation.gov.uk/ukpga/1998/42/schedule/2#schedule-2-paragraph-6' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 60." ) %>
 
 <%= content_tag( 'h2', 'Remedial order (non-urgent procedure) - draft affirmative scrutiny period' ) %>
+<%= content_tag( 'p', "The draft affirmative scrutiny period is the period counted from the laying date of the draft instrument during which the instrument must sit before both Houses. At the end of this period, both Houses must approve the instrument before it can be made. The calculation is set out in #{link_to( 'paragraph 6 of schedule 2 of the Human Rights Act 1998', 'https://www.legislation.gov.uk/ukpga/1998/42/schedule/2#schedule-2-paragraph-6' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 60." ) %>
 
-<%= content_tag( 'h2', 'Remedial order (urgent procedure) - made affirmative scrutiny period' ) %>
+<%= content_tag( 'h2', 'Remedial order (urgent procedure) - made affirmative representation period' ) %>
+<%= content_tag( 'p', "The made affirmative representation period is the period counted from the date of making of the instrument during which representations may be made. At the end of the 60 days, the Minister must lay a statement containing a summary of the representations. The calculation is set out in #{link_to( 'paragraph 6 of schedule 2 of the Human Rights Act 1998', 'https://www.legislation.gov.uk/ukpga/1998/42/schedule/2#schedule-2-paragraph-6' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 60." ) %>
 
 <%= content_tag( 'h2', 'Remedial order (urgent procedure) - made affirmative approval period' ) %>
+<%= content_tag( 'p', "The made affirmative approval period is the period counted from the date of making of the instrument during which both Houses must approve the instrument in order for it to remain law. The calculation is set out in #{link_to( 'paragraph 6 of schedule 2 of the Human Rights Act 1998', 'https://www.legislation.gov.uk/ukpga/1998/42/schedule/2#schedule-2-paragraph-6' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 120." ) %>
 
 <%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - recommendation period' ) %>
+<%= content_tag( 'p', "The recommendation period is the period during which a House, or a committee of either House charged with reporting on the draft regulations, may resolve that sub-sections 6 to 9 of #{link_to( 'section 268 of the Investigatory Powers Act 2016', 'https://www.legislation.gov.uk/ukpga/2016/25/section/268' )} apply. The calculation is set out in #{link_to( 'paragraph 11 of section 268 of the Investigatory Powers Act 2016', 'https://www.legislation.gov.uk/ukpga/2016/25/section/268#section-268-11' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 30." ) %>
 
 <%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - pre-approval period' ) %>
+<%= content_tag( 'p', "Should either House, or a committee of either House charged with reporting on the draft regulations, not resolve that sub-sections 6 to 9 of #{link_to( 'section 268 of the Investigatory Powers Act 2016', 'https://www.legislation.gov.uk/ukpga/2016/25/section/268' )} apply the instrument is subject to a 40 day pre-approval period. At the end of this period, both Houses must approve the instrument before it can be made. The calculation is set out in #{link_to( 'paragraph 11 of section 268 of the Investigatory Powers Act 2016', 'https://www.legislation.gov.uk/ukpga/2016/25/section/268#section-268-11' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 40." ) %>
 
 <%= content_tag( 'h2', 'Enhanced affirmative: Investigatory Powers Act 2016 - extended pre-approval period' ) %>
+<%= content_tag( 'p', "Should either House, or a committee of either House charged with reporting on the draft regulations, resolve that sub-sections 6 to 9 of #{link_to( 'section 268 of the Investigatory Powers Act 2016', 'https://www.legislation.gov.uk/ukpga/2016/25/section/268' )} apply the instrument is subject to a 60 day pre-approval period. At the end of this period, both Houses must approve the instrument before it can be made. The calculation is set out in #{link_to( 'paragraph 11 of section 268 of the Investigatory Powers Act 2016', 'https://www.legislation.gov.uk/ukpga/2016/25/section/268#section-268-11' )}. ".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 60." ) %>
 
 <%= content_tag( 'h2', 'National Policy Statement consideration period' ) %>
+<%= content_tag( 'p', "The National Policy Statement consideration period is the period during which the House of Commons may resolve against a draft National Policy Statement. The calculation is set out in #{link_to( 'paragraph 4A of section 5 of the Planning Act 2008', 'https://www.legislation.gov.uk/ukpga/2008/29/section/5#section-5-4A' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 21." ) %>
 
 <%= content_tag( 'h2', 'Treaty objection period A' ) %>
+<%= content_tag( 'p', "Objection period A is the period counted from the first joint sitting day following the laying of a treaty. During this period either House may resolve that the treaty should not be ratified. The calculation is set out in the Constitutional Reform and Governance Act 2010 section 20 paragraphs #{link_to( '2', 'https://www.legislation.gov.uk/ukpga/2010/25/part/2#section-20-2' )} and #{link_to( '9', 'https://www.legislation.gov.uk/ukpga/2010/25/part/2#section-20-9' )}. Under #{link_to( 'section 21', 'https://www.legislation.gov.uk/ukpga/2010/25/part/2#section-21' )} a minister may choose to make a statement extending the usual 21 day period.".html_safe ) %>
 <ul>
 	<%= content_tag( 'li', "Check if there has been a Government statement extending period A." ) %>
 	<%= content_tag( 'li', "If not, set the number of days to count as 21." ) %>
 </ul>
  
 <%= content_tag( 'h2', 'Treaty objection period B' ) %>
+<%= content_tag( 'p', "Should the House of Commons resolve that a treaty be not ratified during objection period A, the Minister may make a statement indicating that they are of the opinion that the treaty should nevertheless be ratified. Objection period B starts on the first joint sitting day following the making of this statement. During this period the House of Commons may resolve that the treaty should not be ratified. The calculation is set out in the Constitutional Reform and Governance Act 2010 section 20 paragraphs #{link_to( '5', 'https://www.legislation.gov.uk/ukpga/2010/25/part/2#section-20-5' )} and #{link_to( '9', 'https://www.legislation.gov.uk/ukpga/2010/25/part/2#section-20-9' )}.".html_safe ) %>
 <%= content_tag( 'p', "Set the number of days to count as 21." ) %>
